tests/vertical-slice/accept/sleep_duration.hew
fn main() -> i64 {
    sleep(0ms);
    0
}
