tests/vertical-slice/reject/unresolved_symbol.hew
fn main() -> i64 {
  return missing;
}
